--- a/relayer-api/package.json
+++ b/relayer-api/package.json
@@ -9,6 +9,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "abi-decoder": "^2.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
@@ -16,6 +18,7 @@
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "typescript": "^4.9.4"
   }
